# genemap2-parser

./: README.md  pyproject.toml
genemap2_parser/: script.py
